@@ -1,4 +1,6 @@
-All development (so far) by Evan Miller.
+Most development (so far) by Evan Miller.
 
 PECL Memcache compatibility sponsored by Spil Games, Inc.
 [http://www.spilgames.com/]
+
+Support for servers marked as "down" contributed by Jack Lindamood of Facebook.
