@@ -1,3 +1,4 @@
 ngx_addon_name=ngx_http_upstream_hash_module
 HTTP_MODULES="$HTTP_MODULES ngx_http_upstream_hash_module"
 NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_upstream_hash_module.c"
+have=NGX_HTTP_UPSTREAM_HASH . auto/have
